src/objects/SPE_KPICalculation__c.object
<CustomObject>
    <fields>
        <fullName>Aggregation__c</fullName>
        <label>Aggregation</label>
        <picklist>
            <picklistValues>
                <fullName>Min</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Max</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Count</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Avg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Constant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Min( Across Suppliers)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Max( Across Suppliers)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Avg( Across Suppliers)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ConstantValue__c</fullName>
        <label>Constant Value</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Filter1__c</fullName>
        <label>Filter1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filter2__c</fullName>
        <label>Filter2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IndexName__c</fullName>
        <label>Index Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Index__c</fullName>
        <label>Index</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KPIDefinition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>KPI Definition</label>
        <referenceTo>SPE_KPIDefinition__c</referenceTo>
        <relationshipLabel>KPI Calculations</relationshipLabel>
        <relationshipName>KPI_Calculations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PIDefination__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PI Defination</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Please Select a Published PI</errorMessage>
            <filterItems>
                <field>SPE_PIDefinition__c.LifecycleStage__c</field>
                <operation>equals</operation>
                <value>Published, Pilot</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SPE_PIDefinition__c</referenceTo>
        <relationshipLabel>KPI Calculations</relationshipLabel>
        <relationshipName>KPI_Calculations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PrevKPIDefination__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Prev KPI Defination</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>SPE_KPIDefinition__c.LifecycleStage__c</field>
                <operation>equals</operation>
                <value>Published, Pilot</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SPE_KPIDefinition__c</referenceTo>
        <relationshipLabel>KPI Calculations (Prev KPI Defination)</relationshipLabel>
        <relationshipName>KPI_Calculations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QuestionName__c</fullName>
        <formula>SurveyQuestion__r.SurveyQuestion__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Question Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SurveyQuestion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Survey Question to calculate survey based PI (Soft PI)</description>
        <label>Survey Question</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>SPE_SurveyQuestion__c.PIDefinition__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <infoMessage>Question linked to PI are shown here</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SPE_SurveyQuestion__c</referenceTo>
        <relationshipLabel>KPI Calculations</relationshipLabel>
        <relationshipName>KPI_Calculations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TimeFrame__c</fullName>
        <label>Time Frame (In Months)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>filter10__c</fullName>
        <label>filter10</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>flag</label>
        <type>Checkbox</type>
    </fields>
    <label>KPI Calculation</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>KCal-{00000}</displayFormat>
        <label>KPI Calculation Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>KPI Calculations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>